# titans-miras-demo

./: .gitignore  README.md  pyproject.toml
docs/plans/: 2026-02-16-titans-miras-design.md  2026-02-16-titans-miras-implementation.md
notebooks/: 01_surprise_metric.ipynb  02_memory_module.ipynb  03_full_titans.ipynb  04_visualization.ipynb
scripts/: generate_figures.py
tests/: test_data.py  test_memory.py  test_surprise.py  test_titans.py
titans_memory/: __init__.py  data.py  memory.py  surprise.py  titans.py
