[project]
name = "titans-miras-demo"
version = "0.1.0"
description = "Educational demo of Titans surprise-based memory mechanism"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.0",
    "matplotlib>=3.7",
    "numpy>=1.24",
    "jupyter>=1.0",
    "ipykernel>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["titans_memory"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
